fixed the CalculatorInteractorTest